add some assets and set manifest configuration

--- a/styles.css
+++ b/styles.css
@@ -107,4 +107,15 @@ body>#toolbar {
     background-color: var(--color-toolbar);
 }
 
+@media (display-mode: standalone), (display-mode: minimal-ui) {
+    body>#toolbar {
+        padding: env(safe-area-inset-top) 
+            env(safe-area-inset-right) 
+            env(safe-area-inset-bottom) 
+            env(safe-area-inset-left) !important;
+    }
 
+    #itemInstall {
+        display: none;
+    }
+}
